--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title> WeatherApp</title>
         <meta name="description" content="My Weather App">
-        <link rel="stylesheet" href="style.css"
+        <link rel="stylesheet" href="style.css">
     </head>
   <body>
     <main>
@@ -19,6 +19,7 @@
             <div class="forecast">X</div>
             <div class="forecast">X</div>
         </div>
-    </main>        
+    </main>   
+    <script src="script.js"></script>    
   </body>
 </html>
